--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,16 @@ padding: 20px 0;
 left: 0;
 }
 
+.navigation-startseite{
+display: flex;
+justify-content: flex-end;
+
+}
+
+.navigation-ausrichtung{
+    margin-top: 30px;
+}
+
 li{
 text-decoration: none;
 list-style-type: none;
@@ -134,7 +144,7 @@ button:hover a{
 
 /*********************TEXT UND VIDEO AUF HOME**************************/
 h2{
-    margin: 40px 0 10px 0;
+    margin: 0px 0 10px 0;
 }
 
 .portrait{
@@ -145,13 +155,15 @@ h2{
     padding-bottom: 20px;
 }
 
-.startvideo{
-    width: auto;
-    height: auto;
-    z-index: -1;
-    top: 12vh;
-    left: 0;
-    }
+.fluid-yt {
+    aspect-ratio: 16 / 9;
+    margin-top: 40px;
+}
+
+.fluid-yt .startvideo {
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 
 /*********************SLIDESHOW**************************/
