--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+:root {
+  --abstand-m: 20px;
+  --abstand-s: 15px;
+  --abstand-xs: 10px;
+}
+
 /*****************INDEX.HTML******************/
 /*****************INDEX.HTML******************/
 /*****************INDEX.HTML******************/
@@ -70,11 +76,12 @@ width: 60%;
 
 .navigation{
 /*position: fixed;*/
-width: 99vw;
+width: 100%;
 background-color: black;
 top: 0;
 padding: 20px 0;
 left: 0;
+margin: 0;
 }
 
 .navigation-startseite{
@@ -142,12 +149,12 @@ button:hover{
 
 button:hover a{
     color: black;
-}*/
+}
 
 
 /*********************TEXT UND VIDEO AUF HOME**************************/
 h2{
-    margin: 0px 0 10px 0;
+    margin: 20px 0 10px 0;
 }
 
 .portrait{
@@ -284,24 +291,47 @@ h2{
 /*****************TOOLBAR.HTML******************/
 /*****************TOOLBAR.HTML******************/
 #toolcontainer {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(3, 250px); /* Erstellt drei gleich breite Spalten */
+  grid-gap: 10px; /* Fügt Abstand zwischen den Elementen hinzu */
+  margin-top: 25px;
+  margin-bottom: 40px;
 }
 
 article {
-  width: 150px;
+  width: 250px;
   background-color: black;
-  margin: 20px;
   color: white;
-
+  text-align: center;
 }
 
 img.bilderintoolbar {
-  max-width: 50%;
-  justify-content: center;
-  
+  max-width: 50%;  
+}
+
+.texttoolbar{
+margin-top: var(--abstand-xs);
+}
+
+article a{
+  width: 100%;
+  height: 100%;
+  display: block;
+  color: white;
+  padding: 15px;
+}
+
+article:hover{
+  background-color:white;
+}
+
+article:hover a{
+  color: black;
+}
+
+/* Ändere das Logo auf Schwarz, wenn der Benutzer darüber fährt (Hover) */
+#toolcontainer a:hover .bilderintoolbar {
+  filter: invert(1); /* Ändere die Farben des Logos (weiß wird zu schwarz) */
 }
 
 
