--- a/css/style.css
+++ b/css/style.css
@@ -403,6 +403,19 @@ h2{
   font-style: italic;
 }
 
+
+.zitateslideshow-container {
+  max-width: 100%;
+  position: relative;
+  margin: auto;
+}
+
+.mySlideszitat {
+  display: none;
+}
+
+
+
 /***********************FOOTER***************************/
 footer{
   border-top: 2px solid black;
