--- a/css/style.css
+++ b/css/style.css
@@ -552,6 +552,25 @@ article:hover a{
 /*****************RESPONSIVE******************/
 /*****************RESPONSIVE******************/
 
+/* Stile für serh große Bildschirme */
+@media (min-width: 1080px) {
+
+.fluid-yt .startvideo {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 10vh;
+  z-index: 0;
+}
+
+.portrait {
+  margin: 17vh 0 0 0;
+}
+}
+
+
 /* Stile für große Bildschirme */
 @media (min-width: 1024px) {
 .navigation {
@@ -604,6 +623,10 @@ footer {
   footer {
     margin-top: 15vh;
   }
+
+  .col-10 img {
+    width: 20%;
+}
 }
 
 
@@ -634,6 +657,10 @@ footer {
   footer {
     padding-top: 10px;
   }
+
+  .col-10 img {
+    width: 11%;
+}
 }
 
 
