--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,121 @@ li a:hover{
   text-decoration: underline;
   }
 
+/*******************BURGER*******************/
+
+label{
+  display: none;
+}
+
+label .menu {
+  position: fixed;
+  right: -100px;
+  top: -100px;
+  z-index: 100;
+  width: 200px;
+  height: 200px;
+  background: rgb(120, 134, 107);
+  border-radius: 50% 50% 50% 50%;
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  box-shadow: 0 0 0 0 #FFF, 0 0 0 0 #FFF;
+  cursor: pointer;
+  
+}
+
+label .hamburger {
+  position: absolute;
+  top: 135px;
+  left: 50px;
+  width: 30px;
+  height: 2px;
+  background: white;
+  display: block;
+  -webkit-transform-origin: center;
+  transform-origin: center;
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+}
+
+label .hamburger:after, label .hamburger:before {
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: white;
+}
+
+label .hamburger:before { top: -10px; }
+
+label .hamburger:after { bottom: -10px; }
+
+label input { display: none; }
+
+label input:checked + .menu {
+  box-shadow: 0 0 0 100vw rgb(120, 134, 107), 0 0 0 100vh rgb(120, 134, 107);
+  border-radius: 0;
+  
+}
+
+label input:checked + .menu .hamburger {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  
+}
+
+label input:checked + .menu .hamburger:after {
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+  bottom: 0;
+  
+}
+
+label input:checked + .menu .hamburger:before {
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+  top: 0;
+  
+}
+
+label input:checked + .menu + ul { opacity: 1; }
+
+label ul {
+  z-index: 200;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  -webkit-transition: .25s 0s ease-in-out;
+  transition: .25s 0s ease-in-out;
+}
+
+label a {
+  margin-bottom: 2em;
+  display: block;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  
+}
+label li {
+  float: left;
+  text-align: center;
+  clear: both;
+}
+
+label li p{
+  color: white;
+  font-size: 0.8em;
+  font-style: italic;
+  text-align: left;
+
+}
+
 
 /*********************BILDER**************************/
 .col-50{
@@ -553,7 +668,7 @@ article:hover a{
 /*****************RESPONSIVE******************/
 /*****************RESPONSIVE******************/
 
-/* Stile für serh große Bildschirme */
+/*Grosse Bildschirme*/
 @media (min-width: 1080px) {
 
 .fluid-yt .startvideo {
@@ -564,79 +679,65 @@ article:hover a{
   left: 0;
   top: 10vh;
   z-index: 0;
-}
+  }
 
 .portrait {
   margin: 17vh 0 0 0;
-}
-}
-
-
-/* Stile für große Bildschirme */
-@media (min-width: 1024px) {
-.navigation {
-  padding: 20px 0;
+  }
 }
 
-.portrait {
-  margin: 2vh 0 0 0;
-}
+/*Tablet*/
+@media (max-width: 1024px) {
 
-h1 {
-  font-size: 7em;
-}
+  .col-20 {
+    flex: 1 0 16%;
+    display: inline-block;
+    }
 
-#slideshow {
-  width: 50vw;
-}
-
-.zitateslideshow-container {
-  max-width: 100%;
-}
-
-#toolcontainer {
-  grid-template-columns: repeat(3, 250px);
-}
-
-footer {
-  margin-top: 20vh;
-}
-}
-
-/* Stile für mittlere Bildschirme */
-@media (max-width: 1023px) and (min-width: 768px) {
-  .navigation {
-    padding: 15px 0;
+  .fluid-yt .startvideo {
+    width: 100%;
+    height: 50%;
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 9vh;
+    z-index: 0;
   }
 
-  h1 {
-    font-size: 5em;
+  #portraetvideoscontainer {
+    grid-template-columns: none;
+   }
+
+   #rssFeedCards{
+    display: grid;
+    grid-template-columns: repeat(3, 300px); /* Erstellt drei gleich breite Spalten */
+    grid-gap: 20px; /* Fügt Abstand zwischen den Elementen hinzu*/
+    margin-top: 25px;
+    margin-bottom: 40px;
   }
 
-  #slideshow {
-    width: 70vw;
+  .card{
+    width: 30vw;
   }
-
-  .zitateslideshow-container {
-    max-width: 90%;
-  }
-
-  #toolcontainer {
-    grid-template-columns: repeat(2, 250px);
-  }
-
-  footer {
-    margin-top: 15vh;
+  
+  .portrait {
+    margin: -4vh 0 0 0;
   }
 
   .col-10 img {
-    width: 20%;
-}
+    width: 6%;
+    float: right;
+  }
+
+  h2 {
+    margin: 50px 0 10px 0;
+  }
+
 }
 
-
-/* Stile für kleine Bildschirme */
+/*Kleine Bildschirme*/
 @media (max-width: 767px) {
+
   .navigation {
     flex-direction: column;
     align-items: center;
@@ -651,30 +752,102 @@ footer {
     width: 80vw;
   }
 
-  .zitateslideshow-container {
-    max-width: 80%;
-  }
-
   #toolcontainer {
-    grid-template-columns: repeat(2, 1fr); /* Zum Beispiel zwei Spalten für kleinere Bildschirme */
-  }
-
-  footer {
-    padding-top: 10px;
+    grid-template-columns: repeat(2, 1fr); /*zwei Spalten für kleinere Bildschirme*/
   }
 
   .col-10 img {
-    width: 11%;
+    width: 6%;
+    float: right;
+  }
+
+  header nav{
+  display: none;
+  }
+
+  label{
+  display: table;
+  }
+
+  header .flex{
+    gap: 0;
+  }
+
+  .fluid-yt .startvideo {
+    top: 8vh;
+  }
+
+  .container h5 {
+    top: 40vh;
+  }
+
+  .line-container{
+    top: 43vh;
+  }
+
+  .portrait {
+    margin: 6vh 0 0 0;
+  }
+
+  h2 {
+    margin: 60px 0 10px 0;
+  }
+
+ #portraetvideoscontainer, #rssFeedCards, #toolcontainer {
+    grid-template-columns: none;
+   }
+   
+  .card{
+    width: 70vw;
+  }
+
+
+/*Handy*/
+@media (max-width: 450px) {
+ 
+  .fluid-yt .startvideo {
+    height: 35%;
+    top: 5vh;
+  }
+
+  .container h5 {
+    top: 35vw;
+  }
+
+  .line-container{
+    top: 20vh;
+  }
+
+  .portrait {
+    margin: 6vh 0 0 0;
+    }
+
+  p {
+  text-align: left;
+  }
+
+ .col-90{
+  flex: 1 0 92%;
+ }
+
+ #portraetvideoscontainer, #rssFeedCards, #toolcontainer {
+  grid-template-columns: none;
+ }
+  
+ label .menu{
+  right: -66px;
+ }
+
+ .card{
+  width: 70vw;
+}
+
+.col-20 img{
+  width:90%;
+}
+
+h2 {
+  margin: 73px 0 10px 0;
 }
 }
-
-
-
-
-
-
-
-
-
-
-
+}
