--- a/css/style.css
+++ b/css/style.css
@@ -1,103 +1,105 @@
+/*************DEFINIERTE ABSTÄNDE**************/
 :root {
   --abstand-m: 20px;
   --abstand-s: 15px;
   --abstand-xs: 10px;
-  }
+}
 
-  ::-webkit-scrollbar {  
+/*************FARBE VON SCROLLBAR ANPASSEN**************/
+::-webkit-scrollbar {  
     width: 15px; 
     background: rgb(243, 243, 243);
-  }
+}
 
-  ::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb{
     background-color: rgb(120, 134, 107);
     border-radius: 20px;
-  }
+}
 
+/*************EINSTELLUNGEN FÜR MEIN GANZES PROJEKT*************/
 * {
   font-size: 1em;
   font-family: 'Arial', sans-serif;
   box-sizing: border-box;
   margin: 0 auto;
-  }
+}
 
-  .wrapper{
+.wrapper{
     width: 88vw;
     margin: 0 auto;
-  }
+}
 
-  
-  h1{
+h1{
   font-family: 'Arial Black', sans-serif;
   font-size: 6em;
-  }
+}
   
-  h2{
+h2{
   font-size: 2.2em;
   font-weight: bold;
   font-size: 2em;
   text-transform: uppercase;
-  } 
+} 
 
-  h1, h2{
+h1, h2{
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 0;
-  }
+}
 
-  p{
+p{
     text-align: justify;
     text-align-last: none;
     line-height: 24px; /* Setzt den Zeilenabstand auf 24 Pixel */
-  }
+}
   
-  .marginTop-70{
+.marginTop-70{
   margin-top: 70vh;
-  }
+}
   
-  .flex{
+.flex{
   display: flex;
   gap: 50px;
   flex-wrap: wrap;
   justify-content: flex-start;
-  }
+}
   
-  .toolbar{
+.toolbar{
       margin: 0; 
-  }
+}
 
 /*****************INDEX.HTML******************/
 /*****************INDEX.HTML******************/
 /*****************INDEX.HTML******************/
 
 /*****************HEADER UND NAV******************/
- .Navigation .flex{
+.Navigation .flex{
   align-items: center;
-  }
+}
   
  header .Navigation .col-80{
   text-align: right;
-  }
+}
 
 .col-10{
   flex: 1 0 4%;
   display: inline-block;
-  }
+}
 
 .col-20{
   flex: 1 0 18%;
   display: inline-block;
-  }
+}
 
 .col-80{
   flex: 1 0 78%;
   display: inline-block;
-  }
+}
 
 .col-90{
   flex: 1 0 92%;
   display: inline-block;
-  }
+}
 
 .col-20 img{
 width: 60%;
@@ -147,8 +149,7 @@ li a:hover{
   text-decoration: underline;
   }
 
-/*******************BURGER*******************/
-
+/*******************BURGER NAVIGATION FÜR RESPONSIVES DESIGN*******************/
 label{
   display: none;
 }
@@ -166,7 +167,6 @@ label .menu {
   transition: .5s ease-in-out;
   box-shadow: 0 0 0 0 #FFF, 0 0 0 0 #FFF;
   cursor: pointer;
-  
 }
 
 label .hamburger {
@@ -203,27 +203,23 @@ label input { display: none; }
 label input:checked + .menu {
   box-shadow: 0 0 0 100vw rgb(120, 134, 107), 0 0 0 100vh rgb(120, 134, 107);
   border-radius: 0;
-  
 }
 
 label input:checked + .menu .hamburger {
   -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  
+  transform: rotate(45deg); 
 }
 
 label input:checked + .menu .hamburger:after {
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
   bottom: 0;
-  
 }
 
 label input:checked + .menu .hamburger:before {
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
   top: 0;
-  
 }
 
 label input:checked + .menu + ul { opacity: 1; }
@@ -246,8 +242,8 @@ label a {
   color: white;
   text-decoration: none;
   text-align: center;
-  
 }
+
 label li {
   float: left;
   text-align: center;
@@ -259,9 +255,7 @@ label li p{
   font-size: 0.8em;
   font-style: italic;
   text-align: left;
-
 }
-
 
 /*********************BILDER**************************/
 .col-50{
@@ -278,7 +272,7 @@ label li p{
   left: 0;
   }
 
-  /*********************SLIDESHOW**************************/
+/*********************SLIDESHOW**********************/
 * {box-sizing:border-box}
 
 /* Slideshow container */
@@ -371,7 +365,7 @@ button:hover a{
     color: rgb(120, 134, 107);
 }
 
-/*********************TEXT UND VIDEO AUF HOME**************************/
+/*********************TEXT UND VIDEO AUF STARTSEITE**************************/
 h2{
     margin: 20px 0 10px 0;
 }
@@ -484,7 +478,7 @@ h2{
   }
 }
 
-/*********************ZITAT****************************/
+/*********************ZITAT************************/
 .zitat{
   background-color: rgb(120, 134, 107);
   padding: 20px 0;
@@ -513,6 +507,8 @@ h2{
   display: none;
 }
 
+/***********************FOOTER***************************/
+/***********************FOOTER***************************/
 /***********************FOOTER***************************/
 footer{
   border-top: 2px solid black;
@@ -547,6 +543,7 @@ footer .flex{
 .col-10 img{
   width:100%;
 }
+
 /*****************PORTRAETVIDEOS.HTML******************/
 /*****************PORTRAETVIDEOS.HTML******************/
 /*****************PORTRAETVIDEOS.HTML******************/
@@ -664,11 +661,11 @@ article:hover a{
   filter: invert(1);
 }
 
-/*****************RESPONSIVE******************/
-/*****************RESPONSIVE******************/
-/*****************RESPONSIVE******************/
+/*****************RESPONSIVES DESIGN******************/
+/*****************RESPONSIVES DESIGN******************/
+/*****************RESPONSIVES DESIGN******************/
 
-/*Grosse Bildschirme*/
+/***************GROSSE BILDSCHIRME**************/
 @media (min-width: 1080px) {
 
 .fluid-yt .startvideo {
@@ -679,166 +676,166 @@ article:hover a{
   left: 0;
   top: 10vh;
   z-index: 0;
-  }
+}
 
 .portrait {
   margin: 12vh 0 0 0;
-  }
+}
 }
 
-/*Tablet*/
+/***************TABLET**************/
 @media (max-width: 1024px) {
 
-  .col-20 {
-    flex: 1 0 16%;
-    display: inline-block;
-    }
-
-  .fluid-yt .startvideo {
-    width: 100%;
-    height: 50%;
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 9vh;
-    z-index: 0;
-  }
-
-  #portraetvideoscontainer {
-    grid-template-columns: none;
-   }
-
-   #rssFeedCards{
-    display: grid;
-    grid-template-columns: repeat(3, 300px); /* Erstellt drei gleich breite Spalten */
-    grid-gap: 20px; /* Fügt Abstand zwischen den Elementen hinzu*/
-    margin-top: 25px;
-    margin-bottom: 40px;
-  }
-
-  .card{
-    width: 30vw;
-  }
-  
-  .portrait {
-    margin: -4vh 0 0 0;
-  }
-
-  .col-10 img {
-    width: 6%;
-    float: right;
-  }
-
-  h2 {
-    margin: 50px 0 10px 0;
-  }
-
+.col-20 {
+  flex: 1 0 16%;
+  display: inline-block;
 }
 
-/*Kleine Bildschirme*/
+.fluid-yt .startvideo {
+  width: 100%;
+  height: 50%;
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 9vh;
+  z-index: 0;
+}
+
+#portraetvideoscontainer {
+  grid-template-columns: none;
+}
+
+#rssFeedCards{
+  display: grid;
+  grid-template-columns: repeat(3, 300px); /* Erstellt drei gleich breite Spalten */
+  grid-gap: 20px; /* Fügt Abstand zwischen den Elementen hinzu*/
+  margin-top: 25px;
+  margin-bottom: 40px;
+}
+
+.card{
+  width: 30vw;
+}
+  
+.portrait {
+  margin: -4vh 0 0 0;
+}
+
+.col-10 img {
+  width: 6%;
+  float: right;
+}
+
+h2 {
+  margin: 50px 0 10px 0;
+}
+}
+
+/***************KLEINE BILDSCHIRME**************/
 @media (max-width: 767px) {
 
-  .navigation {
-    flex-direction: column;
-    align-items: center;
-  }
+.navigation {
+  flex-direction: column;
+  align-items: center;
+}
 
-  .col-80 {
-    text-align: center;
-    margin-top: 15px;
-  }
+.col-80 {
+  text-align: center;
+  margin-top: 15px;
+}
 
-  #slideshow {
-    width: 80vw;
-  }
+#slideshow {
+  width: 80vw;
+}
 
-  #toolcontainer {
-    grid-template-columns: repeat(2, 1fr); /*zwei Spalten für kleinere Bildschirme*/
-  }
+#toolcontainer {
+  grid-template-columns: repeat(2, 1fr); /*zwei Spalten für kleinere Bildschirme*/
+}
 
-  .col-10 img {
-    width: 6%;
-    float: right;
-  }
+.col-10 img {
+  width: 6%;
+  float: right;
+}
 
-  header nav{
+header nav{
   display: none;
-  }
+}
 
-  label{
+label{
   display: table;
-  }
+}
 
-  header .flex{
-    gap: 0;
-  }
+header .flex{
+  gap: 0;
+}
 
-  .fluid-yt .startvideo {
-    top: 8vh;
-  }
+.fluid-yt .startvideo {
+  top: 8vh;
+}
 
-  .container h5 {
-    top: 40vh;
-  }
+.container h5 {
+  top: 40vh;
+}
 
-  .line-container{
-    top: 43vh;
-  }
+.line-container{
+  top: 43vh;
+}
 
-  .portrait {
-    margin: 6vh 0 0 0;
-  }
+.portrait {
+  margin: 6vh 0 0 0;
+}
 
-  h2 {
-    margin: 60px 0 10px 0;
-  }
+h2 {
+  margin: 60px 0 10px 0;
+}
 
- #portraetvideoscontainer, #rssFeedCards, #toolcontainer {
-    grid-template-columns: none;
-   }
+#portraetvideoscontainer, #rssFeedCards, #toolcontainer {
+  grid-template-columns: none;
+}
    
-  .card{
-    width: 70vw;
-  }
+.card{
+  width: 70vw;
+}
+}
 
 
-/*Handy*/
+/***************HANDY**************/
 @media (max-width: 450px) {
  
-  .fluid-yt .startvideo {
-    height: 35%;
-    top: 5vh;
-  }
+.fluid-yt .startvideo {
+  height: 35%;
+  top: 5vh;
+}
 
-  .container h5 {
-    top: 35vw;
-  }
+.container h5 {
+  top: 35vw;
+}
 
-  .line-container{
-    top: 20vh;
-  }
+.line-container{
+  top: 20vh;
+}
 
-  .portrait {
-    margin: 6vh 0 0 0;
-    }
+.portrait {
+  margin: 6vh 0 0 0;
+}
 
-  p {
+p {
   text-align: left;
-  }
+}
 
- .col-90{
+.col-90{
   flex: 1 0 92%;
- }
+}
 
- #portraetvideoscontainer, #rssFeedCards, #toolcontainer {
+#portraetvideoscontainer, #rssFeedCards, #toolcontainer {
   grid-template-columns: none;
- }
+}
   
- label .menu{
+label .menu{
   right: -66px;
- }
+}
 
- .card{
+.card{
   width: 70vw;
 }
 
@@ -848,6 +845,5 @@ article:hover a{
 
 h2 {
   margin: 73px 0 10px 0;
-}
 }
 }
